--- a/.github/workflows/01-building-blocks.yaml
+++ b/.github/workflows/01-building-blocks.yaml
@@ -9,7 +9,7 @@ jobs:
             - name: Say hello
               run: echo "Hello, world!"
     echo-goodbye: 
-        runs-on: ubuntu latest
+        runs-on: ubuntu-latest
         steps:
             - name: Failed step
               run: |
@@ -17,4 +17,3 @@ jobs:
                 exit 1
             - name: Say Goodbye
               run: echo "Goodbye!"
-              
